@@ -4,6 +4,11 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-14 (opened Feb 24, 2009)
 
+	* as.ts.oecosimu: new function for applying time series methods
+	for sequential null models ("swap", "tswap").  The method was
+	implemented to study a lighter alternative to permat.tsdiag and
+	lagplot functions of "permat" objects.
+
 	* metaMDSrotate: a new function to rotate metaMDS configuration so
 	that the first axis is parallel with a continuous site variable.
 	
